--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "nodeman": "^1.1.2",
     "nodemon": "^3.1.10",
     "socket.io": "^4.8.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "ws": "^8.18.2"
   }
 }
